--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Product landing page</title>
 </head>
 <body>
@@ -20,7 +21,8 @@
     </video>
 
     <form action="#">
-        <input type="email" id="email">
+        <input type="email" id="email" placeholder="Write your email here">
+        <input type="submit" name="Submit button" id="submit">
     </form>
 </body>
 </html>
