changes in file

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <source src="https://www.youtube.com/watch?v=Urx8b7jhBXM">
     </video>
 
-    <form action="#">
-        <input type="email" id="email">
+    <form action="https://www.freecodecamp.com/email-submit">
+        <input type="email" id="email" placeholder="#email" name="email">
+        <input type="submit" id="submit">
     </form>
 </body>
 </html>
