--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header id="header">
-        <img src="logo.jpeg" alt="This is a logo" id="header-img">
+        <img src="logo.jpeg" alt="This is a logo" id="header-img" height="200px">
         <nav id="nav-bar">
-            <a class="nav-link" href="#">Section 1</a>
-            <a class="nav-link" href="#">Section 2</a>
-            <a class="nav-link" href="#">Section 3</a>
+            <a class="nav-link" href="#header">Header</a>
+            <a class="nav-link" href="#video">Video</a>
+            <a class="nav-link" href="#form">form</a>
         </nav>
     </header>
 
@@ -20,15 +20,9 @@
         <source src="https://www.youtube.com/watch?v=Urx8b7jhBXM">
     </video>
 
-<<<<<<< HEAD
-    <form action="https://www.freecodecamp.com/email-submit">
-        <input type="email" id="email" placeholder="#email" name="email">
-        <input type="submit" id="submit">
-=======
-    <form action="#">
-        <input type="email" id="email" placeholder="Write your email here">
+    <form action="https://www.freecodecamp.com/email-submit" id="form">
+        <input name="email" type="email" id="email" placeholder="Write your email here">
         <input type="submit" name="Submit button" id="submit">
->>>>>>> 3164d4aedcdbc0ee51b5aeabd9f63607f9084d66
     </form>
 </body>
 </html>
